Extracted default layout
git-svn-id: http://instiki.rubyforge.org/svn/instiki/trunk@9 6672c7b4-72ec-0310-ba2f-80f7574ec3f6

--- a/app/views/wiki/authors.rhtml
+++ b/app/views/wiki/authors.rhtml
@@ -1,4 +1,4 @@
-<% @title = 'Authors' %><%= render 'top' %>
+<% @title = 'Authors' %>
 
 <ul id="authorList">
   <% for author in @authors %>
@@ -9,5 +9,3 @@
     </li>
   <% end %>
 </ul>
-
-<%= render 'bottom' %>
