--- a/app/views/wiki/export.rhtml
+++ b/app/views/wiki/export.rhtml
@@ -1,4 +1,4 @@
-<% @title = "Export" %><%= render 'top' %>
+<% @title = "Export" %>
 
 <p>You can export all the pages in this web as a zip file in either HTML (with working links and all) or the pure markup (to import in another wiki).</p> 
 
@@ -10,5 +10,3 @@
   <li><a href="../export_pdf">PDF</a>
 <% end %>
 </ul>
-
-<%= render 'bottom' %>
