--- a/app/views/wiki/list.rhtml
+++ b/app/views/wiki/list.rhtml
@@ -1,4 +1,4 @@
-<% @title = "All Pages" %><%= render 'top' %>
+<% @title = "All Pages" %>
 
 <% unless @categories.empty? %>
 <div id="categories">
@@ -55,5 +55,3 @@
   </ul>
 <% end %>
 </div>
-
-<%= render 'bottom' %>
