--- a/app/views/wiki/login.rhtml
+++ b/app/views/wiki/login.rhtml
@@ -1,4 +1,4 @@
-<% @title = "#{@web_name} Login" %><% @hide_navigation = true %><%= render 'top' %>
+<% @title = "#{@web_name} Login" %><% @hide_navigation = true %>
 
 <form action="authenticate" method="post">
 <p>
@@ -6,6 +6,3 @@
     <input type="password" name="password" />
 </p>
 </form>
-
-
-<%= render 'bottom' %>
