--- a/app/views/wiki/new_system.rhtml
+++ b/app/views/wiki/new_system.rhtml
@@ -1,4 +1,4 @@
-<% @title = "Instiki Setup"; @content_width = 500 %><%= render 'top' %>
+<% @title = "Instiki Setup"; @content_width = 500 %>
 
 <p>
   Congratulations on succesfully installing and starting Instiki. 
@@ -74,5 +74,3 @@ function validateSetup() {
   return true;
 }
 </script>
-
-<%= render 'bottom' %>
