--- a/app/views/wiki/new_web.rhtml
+++ b/app/views/wiki/new_web.rhtml
@@ -1,4 +1,4 @@
-<% @title = "New Wiki Web"; @content_width = 500 %><%= render 'top' %>
+<% @title = "New Wiki Web"; @content_width = 500 %>
 
 <p>
   Each web serves as an isolated name space for wiki pages, so different subjects or projects can write about different <i>MuppetShows</i>.
@@ -60,5 +60,3 @@ function validateSetup() {
   return true;
 }
 </script>
-
-<%= render 'bottom' %>
