--- a/app/views/wiki/recently_revised.rhtml
+++ b/app/views/wiki/recently_revised.rhtml
@@ -1,4 +1,4 @@
-<% @title = "Recently Revised" %><%= render 'top' %>
+<% @title = "Recently Revised" %>
 
 <% unless @categories.empty? %>
 <div id="categories">
@@ -26,5 +26,3 @@
 
   <% revision_date = page.revised_on %>
 <% end %>
-
-<%= render 'bottom' %>
