--- a/app/views/wiki/revision.rhtml
+++ b/app/views/wiki/revision.rhtml
@@ -1,4 +1,4 @@
-<% @title = "#{@page.plain_name} (Rev ##{@revision.number})" %><%= render 'top' %>
+<% @title = "#{@page.plain_name} (Rev ##{@revision.number})" %>
 
 <div id="revision">
   <%= @revision.display_content %>
@@ -77,5 +77,3 @@
     }
   }
 </script>
-
-<%= render 'bottom' %>
