--- a/app/views/wiki/web_list.rhtml
+++ b/app/views/wiki/web_list.rhtml
@@ -1,4 +1,4 @@
-<% @title = "Wiki webs" %><%= render 'top' %>
+<% @title = "Wiki webs" %>
 
 <ul>
 <% for web in @webs %>
@@ -16,5 +16,3 @@
   </li>
 <% end %>
 </ul>
-
-<%= render 'bottom' %>
