--- a/app/views/layouts/default.rhtml
+++ b/app/views/layouts/default.rhtml
@@ -11,7 +11,7 @@
     <% end %>
   </title>
 
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
   <style type="text/css">
     h1#pageName, .newWikiWord a, a.existingWikiWord, .newWikiWord a:hover, #TextileHelp h3 { 
@@ -28,12 +28,13 @@
 
   <style type="text/css">
     <%= @style_additions %>
-    <%= @web ? @web.additional_style : "" %>
+    <%= @web ? @web.additional_style : '' %>
   </style>
 </head>
+
 <body>
 <div id="Container">
-  <div id="Content">
+<div id="Content">
   
   <h1 id="pageName">
     <% if @page and (@page.name == 'HomePage') and %w( show published print ).include?(@action_name) %>
@@ -46,4 +47,10 @@
     <% end %>
   </h1>
 
-  <%= render 'navigation' unless @web.nil? || @hide_navigation %>
+<%= render 'navigation' unless @web.nil? || @hide_navigation %>
+<%= @content_for_layout %>
+
+</div> <!-- Content -->
+</div> <!-- Container -->
+</body>
+</html>
