Moved Page#pretty_revised_on to the view (it is not a model method)
git-svn-id: http://instiki.rubyforge.org/svn/instiki/trunk@18 6672c7b4-72ec-0310-ba2f-80f7574ec3f6

--- a/app/views/wiki/recently_revised.rhtml
+++ b/app/views/wiki/recently_revised.rhtml
@@ -12,7 +12,11 @@
 <ul>
 <% for page in @pages_by_revision %>
   <% if page.revised_on < revision_date %>
-    </ul><b><%= page.pretty_revised_on %></b><ul>
+    </ul><b>
+    	<%= DateTime.new(page.revised_on.year, page.revised_on.mon, 
+                page.revised_on.day).strftime('%B %e, %Y') 
+         %>
+    </b><ul>
   <% end %>
   
   <li>
