changed tex.rhtml in response to a warning from pdflatex version: MiKTeX-pdfetex 2.4.1700 (1.20a-rc7.2) (MiKTeX 2.4)
git-svn-id: http://instiki.rubyforge.org/svn/instiki/trunk@26 6672c7b4-72ec-0310-ba2f-80f7574ec3f6

--- a/app/views/wiki/tex.rhtml
+++ b/app/views/wiki/tex.rhtml
@@ -5,7 +5,7 @@
 \usepackage{a4}
 \usepackage{graphicx}
 \usepackage{ucs}
-\usepackage[utf8]{inputenc}
+\usepackage[utf8x]{inputenc}
 \input epsf 
 
 %-------------------------------------------------------------------
