Display error message from a flash at the top of the page
git-svn-id: http://instiki.rubyforge.org/svn/instiki/trunk@39 6672c7b4-72ec-0310-ba2f-80f7574ec3f6

--- a/app/views/layouts/default.rhtml
+++ b/app/views/layouts/default.rhtml
@@ -47,6 +47,10 @@
     <% end %>
   </h1>
 
+<% if @flash[:error] %> <div id="error" class="error">
+    <hr/><p><%= @flash[:error].to_s %></p><hr/></div>
+<% end %>
+
 <%= render 'navigation' unless @web.nil? || @hide_navigation %>
 <%= @content_for_layout %>
 
