Corrected a link, and changed it to a link_to method
git-svn-id: http://instiki.rubyforge.org/svn/instiki/trunk@40 6672c7b4-72ec-0310-ba2f-80f7574ec3f6

--- a/app/views/wiki/locked.rhtml
+++ b/app/views/wiki/locked.rhtml
@@ -7,6 +7,14 @@
 <% end %>
 
 <p>
-  <a href="<%= @page.name %>?break_lock=1" accesskey="E">Edit the page anyway</a> |
-  <a href="../show/<%= @page.name %>">Cancel</a>
+  <%= link_to 'Edit the page anyway',
+        {:web => @web_name, :action => 'edit', :id => @page.name, :params => {'break_lock' => '1'} },
+        {:accesskey => 'E'}
+  %>
+
+  <%= link_to 'Cancel',
+        {:web => @web_name, :action => 'show', :id => @page.name},
+        {:accesskey => 'C'}
+  %>
+
 </p>
