Corrected a reference to non-existent web method in list.rhtml
git-svn-id: http://instiki.rubyforge.org/svn/instiki/trunk@62 6672c7b4-72ec-0310-ba2f-80f7574ec3f6

--- a/app/views/wiki/list.rhtml
+++ b/app/views/wiki/list.rhtml
@@ -38,7 +38,7 @@
     <li>
       <a href="../show/<%= page_name %>"><%= truncate(WikiWords.separate(page_name), 35) %></a>
       wanted by
-      <%= web.select.pages_that_reference(page_name).collect { |page| page.link }.join(", ") %>
+      <%= @web.select.pages_that_reference(page_name).collect { |page| page.link }.join(", ") %>
     </li>
   <% end %>
   </ul>
