Added an informational notice (implemented as a flash) to the default layout
git-svn-id: http://instiki.rubyforge.org/svn/instiki/trunk@89 6672c7b4-72ec-0310-ba2f-80f7574ec3f6

--- a/public/stylesheets/instiki.css
+++ b/public/stylesheets/instiki.css
@@ -154,6 +154,12 @@ ol.setup li {
   width: 450px;
 }
 
+#info {
+  color: darkgreen;
+  font-style: italic;
+  width: 450px;
+}
+
 #TextileHelp table {
 	margin-bottom: 0;
 }
