--- a/app/views/layouts/default.rhtml
+++ b/app/views/layouts/default.rhtml
@@ -51,6 +51,10 @@
     <hr/><p><%= @flash[:error].to_s %></p><hr/></div>
 <% end %>
 
+<% if @flash[:info] %> <div id="info">
+    <hr/><p><%= @flash[:info].to_s %></p><hr/></div>
+<% end %>
+
 <%= render 'navigation' unless @web.nil? || @hide_navigation %>
 <%= @content_for_layout %>
 
