Added a check for XML well-formedness to assert_success (optional, enabled by uncommenting a variable at the top of test_helper.rb); corrected some malformed templates (not all yet)
git-svn-id: http://instiki.rubyforge.org/svn/instiki/trunk@101 6672c7b4-72ec-0310-ba2f-80f7574ec3f6

--- a/app/views/file/file.rhtml
+++ b/app/views/file/file.rhtml
@@ -8,12 +8,12 @@
   <p>
     File to upload:
     <br/>
-    <input type="file" name="file" size="40">
+    <input type="file" name="file" size="40" />
   </p>
   <p>
-    <input type="submit" value="Update"> as 
+    <input type="submit" value="Update" /> as 
     <input type="text" name="author" id="authorName" value="<%= @author %>" 
-        onClick="this.value == 'AnonymousCoward' ? this.value = '' : true">
+        onClick="this.value == 'AnonymousCoward' ? this.value = '' : true" />
 	<% if @page %>
       | <a href="../file/">Cancel</a> <small>(unlocks page)</small>
     <% end %>
