further XML well-formedness fixes
git-svn-id: http://instiki.rubyforge.org/svn/instiki/trunk@103 6672c7b4-72ec-0310-ba2f-80f7574ec3f6

--- a/app/views/wiki/edit.rhtml
+++ b/app/views/wiki/edit.rhtml
@@ -13,9 +13,9 @@
     <textarea name="content" style="width: 450px; height: 500px"><%= @page.content %></textarea>
 </p>
 <p>
-    <input type="submit" value="Update"> as 
+    <input type="submit" value="Update" /> as 
     <input type="text" name="author" id="authorName" value="<%= @author %>" 
-        onClick="this.value == 'AnonymousCoward' ? this.value = '' : true">
+        onClick="this.value == 'AnonymousCoward' ? this.value = '' : true" />
     | <a href="../cancel_edit/<%= @page.name %>">Cancel</a> <small>(unlocks page)</small>
 </p>
 </form>
