--- a/app/views/wiki/new.rhtml
+++ b/app/views/wiki/new.rhtml
@@ -11,8 +11,8 @@
     <textarea name="content" style="width: 450px; height: 500px"></textarea>
 </p>
 <p>
-    <input type="submit" value="Create"> as 
-    <input type="text" name="author" id="authorName" value="<%= @author %>" onClick="this.value == 'AnonymousCoward' ? this.value = '' : true">
+    <input type="submit" value="Create" /> as 
+    <input type="text" name="author" id="authorName" value="<%= @author %>" onClick="this.value == 'AnonymousCoward' ? this.value = '' : true" />
 </p>
 </form>
 
