"View changes" colours replaced text as well [Denis Mertz]
git-svn-id: http://instiki.rubyforge.org/svn/instiki/trunk@113 6672c7b4-72ec-0310-ba2f-80f7574ec3f6

--- a/public/stylesheets/instiki.css
+++ b/public/stylesheets/instiki.css
@@ -126,12 +126,12 @@ ol.setup li {
   font-size: 10px;
 }
 
-.diffdel {
+.diffdel, del.diffmod {
   background: pink;
 }
 
-.diffins {
-  background: lightgreen;
+.diffins, ins.diffmod {
+   background: lightgreen;
 }
 
 #footer {
