Some more accesskeys [kjell]
git-svn-id: http://instiki.rubyforge.org/svn/instiki/trunk@135 6672c7b4-72ec-0310-ba2f-80f7574ec3f6

--- a/app/views/wiki/new.rhtml
+++ b/app/views/wiki/new.rhtml
@@ -11,7 +11,7 @@
     <textarea name="content" style="width: 450px; height: 500px"></textarea>
 </p>
 <p>
-    <input type="submit" value="Create" /> as 
+    <input type="submit" value="Submit" accesskey="s"/> as 
     <input type="text" name="author" id="authorName" value="<%= @author %>" onClick="this.value == 'AnonymousCoward' ? this.value = '' : true" />
 </p>
 </form>
