--- a/app/views/wiki/edit.rhtml
+++ b/app/views/wiki/edit.rhtml
@@ -13,10 +13,10 @@
     <textarea name="content" style="width: 450px; height: 500px"><%= @page.content %></textarea>
 </p>
 <p>
-    <input type="submit" value="Update" /> as 
+    <input type="submit" value="Submit" accesskey="s"/> as 
     <input type="text" name="author" id="authorName" value="<%= @author %>" 
         onClick="this.value == 'AnonymousCoward' ? this.value = '' : true" />
-    | <a href="../cancel_edit/<%= @page.name %>">Cancel</a> <small>(unlocks page)</small>
+    | <a href="../cancel_edit/<%= @page.name %>" accesskey="c">Cancel</a> <small>(unlocks page)</small>
 </p>
 </form>
 
