author links on print page are smart about whether they are being exported or just displayed in the browser
git-svn-id: http://instiki.rubyforge.org/svn/instiki/trunk@137 6672c7b4-72ec-0310-ba2f-80f7574ec3f6

--- a/app/views/wiki/print.rhtml
+++ b/app/views/wiki/print.rhtml
@@ -10,5 +10,5 @@
 <div class="byline">
   <%= @page.revisions? ? "Revised" : "Created" %> on <%= @page.pretty_created_at %> 
   by
-  <%= @page.author_link({ :mode => :export }) %>
+  <%= @page.author_link({ :mode => (@link_mode || :show) }) %>
 </div>
