--- a/app/views/wiki/recently_revised.rhtml
+++ b/app/views/wiki/recently_revised.rhtml
@@ -20,7 +20,7 @@
       <ul>
     <% end %>
     <li>
-      <a href="../show/<%= page.name %>"><%= page.plain_name %></a>
+      <a href="../show/<%= page.url %>"><%= page.plain_name %></a>
       <div class="byline" style="margin-bottom: 0px">
         by <%= page.author_link %>
         at <%= page.created_at.strftime "%H:%M" %>
