--- a/app/views/wiki/edit.rhtml
+++ b/app/views/wiki/edit.rhtml
@@ -8,7 +8,7 @@
 
 <%= render("#{@web.markup}_help") if @web %>
 
-<form id="editForm" action="../save/<%= @page.name %>" method="post" onSubmit="cleanAuthorName();">
+<form id="editForm" action="../save/<%= @page.url %>" method="post" onSubmit="cleanAuthorName();">
 <p>
     <textarea name="content" style="width: 450px; height: 500px"><%= @page.content %></textarea>
 </p>
@@ -16,7 +16,7 @@
     <input type="submit" value="Submit" accesskey="s"/> as 
     <input type="text" name="author" id="authorName" value="<%= @author %>" 
         onClick="this.value == 'AnonymousCoward' ? this.value = '' : true" />
-    | <a href="../cancel_edit/<%= @page.name %>" accesskey="c">Cancel</a> <small>(unlocks page)</small>
+    | <a href="../cancel_edit/<%= @page.url %>" accesskey="c">Cancel</a> <small>(unlocks page)</small>
 </p>
 </form>
 
