--- a/app/views/wiki/rollback.rhtml
+++ b/app/views/wiki/rollback.rhtml
@@ -6,7 +6,7 @@
 
 <%= "<p style='color:red'>Please correct the error that caused this error in rendering:<br/><small>#{@params["msg"]}</small></p>" if @params["msg"] %>
 
-<form id="editForm" action="../save/<%= @page.name %>" method="post" onSubmit="cleanAuthorName();">
+<form id="editForm" action="../save/<%= @page.url %>" method="post" onSubmit="cleanAuthorName();">
 <p>
   <textarea name="content" style="font-size: 12px; width: 450px; height: 500px"><%= @revision.content %></textarea>
 </p>
@@ -14,7 +14,7 @@
     <input type="submit" value="Update"> as 
     <input type="text" name="author" id="authorName" value="<%= @author %>" 
         onClick="this.value == 'AnonymousCoward' ? this.value = '' : true">
-    | <a href="../cancel_edit/<%= @page.name %>">Cancel</a> <small>(unlocks page)</small>
+    | <a href="../cancel_edit/<%= @page.url %>">Cancel</a> <small>(unlocks page)</small>
 </p>
 </form>
 
