Deconflicting a name of an input for two forms on the same page
git-svn-id: http://instiki.rubyforge.org/svn/instiki/trunk@154 6672c7b4-72ec-0310-ba2f-80f7574ec3f6

--- a/app/views/admin/edit_web.rhtml
+++ b/app/views/admin/edit_web.rhtml
@@ -118,7 +118,7 @@
   <p align="right">
     <small>
       Clean up by entering system password
-      <input type="password" id="system_password_orphaned" name="system_password" />
+      <input type="password" id="system_password_orphaned" name="system_password_orphaned" />
       and
       <input type="submit" value="Delete Orphan Pages" />
     </small>
