Moved remove_orphaned_pages action to admin controller
git-svn-id: http://instiki.rubyforge.org/svn/instiki/trunk@158 6672c7b4-72ec-0310-ba2f-80f7574ec3f6

--- a/app/views/admin/edit_web.rhtml
+++ b/app/views/admin/edit_web.rhtml
@@ -1,5 +1,7 @@
 <% @title = "Edit Web" %>
 
+<p><%= @wiki.system[:password] %></p>
+
 <form action="edit_web" id="setup" method="post" 
       onSubmit="cleanAddress(); return validateEditWebForm()">
   <h2 style="margin-bottom: 3px">Name and address</h2>
