Rehashed URL generation once again - templates should not use web.make_link anymore, there is link_for_page helper instead
git-svn-id: http://instiki.rubyforge.org/svn/instiki/trunk@160 6672c7b4-72ec-0310-ba2f-80f7574ec3f6

--- a/app/views/wiki/authors.rhtml
+++ b/app/views/wiki/authors.rhtml
@@ -3,9 +3,9 @@
 <ul id="authorList">
   <% for author in @authors %>
     <li>
-      <%= @web.make_link(author) %>
+      <%= link_to_page author %>
       co- or authored:
-      <%= @web.select.pages_authored_by(author).collect { |page| page.link }.join ', ' %>
+      <%= @web.select.pages_authored_by(author).collect { |page| link_to_page(page.name) }.join ', ' %>
     </li>
   <% end %>
 </ul>
