--- a/app/views/wiki/locked.rhtml
+++ b/app/views/wiki/locked.rhtml
@@ -1,10 +1,13 @@
 <% @title = "#{@page.plain_name} is locked" %>
 
-<% if @page.lock_duration(Time.now) == 0 %>
-  <p><%= @page.locked_by_link %> just started editing this page.</p>
-<% else %>
-  <p><%= @page.locked_by_link %> has been editing this page for <%= @page.lock_duration(Time.now) %> minutes.</p>
-<% end %>
+<p>
+  <%= link_to_page(@page.locked_by) %>
+  <% if @page.lock_duration(Time.now) == 0 %>
+    just started editing this page.
+  <% else %>
+    has been editing this page for <%= @page.lock_duration(Time.now) %> minutes.
+  <% end %>
+</p>
 
 <p>
   <%= link_to 'Edit the page anyway',
