--- a/app/views/wiki/web_list.rhtml
+++ b/app/views/wiki/web_list.rhtml
@@ -4,15 +4,15 @@
 <% for web in @webs %>
   <li>
     <% if web.published %>
-      <%= web.make_link 'HomePage', web.name, :mode => :publish %> (read-only) /
-      <%= web.make_link 'HomePage', 'editable version', :mode => :edit %> (requires login)
+      <%= link_to_page 'HomePage', web, web.name, :mode => 'publish' %>
+      (read-only) /
+      <%= link_to_page 'HomePage', web, 'editable version', :mode => 'show' %> (requires login)
     <% else %>
-      <%= web.make_link 'HomePage', nil, :mode => :edit %>
+      <%= link_to_page 'HomePage', web, web.name, :mode => 'show' %>
     <% end %>
     <div class="byline" style="margin-bottom: 0px">
       <%= web.pages.length %> pages by <%= web.authors.length %> authors
     </div>
-    
   </li>
 <% end %>
 </ul>
